Replace deprecated URL usage with URI in BasicURLNormalizer